--- a/Views/vEstudiante.xaml
+++ b/Views/vEstudiante.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="acolumbaS6.Views.Estudiante"
-             Title="Estudiante">
+             x:Class="acolumbaS6.Views.vEstudiante"
+             Title="vEstudiante">
     <VerticalStackLayout
         Spacing="20"
         Padding="20">
